FIX: Mobile All

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<script src="http://cleantech4us.github.io/JSDep/skrollr.min.js"></script>
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
 		<!--<nav>
