--- a/Hist/index.html
+++ b/Hist/index.html
@@ -18,6 +18,7 @@
 		<script src="/img/waypoints.js"></script>
 		
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
 		
