--- a/Prob/index.html
+++ b/Prob/index.html
@@ -15,6 +15,7 @@
 		<script src="/img/waypoints.js"></script>
 		
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
 		<!--nav>
