--- a/Tech/index.html
+++ b/Tech/index.html
@@ -10,6 +10,7 @@
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 		<script src="/navBar.js"></script>
 		
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="/uni.css" />
 		<link rel="stylesheet" href="tech.css" />
 		
@@ -118,6 +119,24 @@
 		<img src="/img/dronevideopics/test000.png" id="v1" alt="A video of a drone" />
 		
 		<script>
+			
+			
+			//
+			//	SKROLLR
+			//
+			var s = skrollr.init();
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
 			// select video element
 			var vid = document.getElementById('v1');
 			//var vid = $('#v0')[0]; // jquery option
@@ -125,14 +144,8 @@
 			// refresh video frames on interval for smoother playback
 			setInterval(function(){
 				//vid.currentTime = window.pageYOffset/400;
-				vid.src = "/img/dronevideopics/test" + pad(Math.round(window.pageYOffset / 16), 3) + ".png";
+				vid.src = "/img/dronevideopics/test" + pad(Math.round(s.getScrollTop() / 16), 3) + ".png";//window.pageYOffset / 16), 3) + ".png";
 			}, 100);
-			
-			
-			//
-			//	SKROLLR
-			//
-			var s = skrollr.init();
 			
 			
 			
