--- a/Use/index.html
+++ b/Use/index.html
@@ -14,6 +14,7 @@
 		<script src="/img/smooth-scroll.js"></script>
 		<script src="/img/waypoints.js"></script>
 		
+		<meta name="viewport" content="width=device-width">
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
