--- a/Hist/index.html
+++ b/Hist/index.html
@@ -47,24 +47,46 @@
 			<i class="material-icons">&#xE313;</i>
 		</button>
 		
+		
+		<section class="mdl-card mdl-shadow--2dp">
+			<p>"Unmanned Aerial Vehicles (UAVs), Unmanned Aircraft Systems (UASs), or, as they are more commonly known, drones, are becoming a reality, like it or not."</p>
+		</section>
+		
 		<section class="mdl-card mdl-shadow--2dp" id="Sec1">
 			<h2>Beginnings</h2>
-			<div id="UseChart" class="SideChart">
-				<h3>Common Uses</h3>
-				<canvas id="myChart2" width="400" height="400"></canvas>
+			<div class="SideChart">
+				<!--<h3>Common Uses</h3>
+				<canvas id="myChart2" width="400" height="400"></canvas>-->
+				<img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Reginald_Denny_in_Stars_of_the_Photoplay,_1924.jpg" alt="Reginald Denny" style="max-height:50vh;" />
 			</div>
-			<p>Looking at the wide variety of drones in use today, doing everything from photography to surveying (for more details, see the <a href="/Use/">uses</a> page), it’s hard to imagine where this all must have started. However, drones didn't always exist in their modern forms. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
+			<p>Looking at the wide variety of drones in use today, doing everything from photography to surveying, it’s hard to imagine where this all must have started. However, drones didn't always exist in their modern forms. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
 		</section>
 		
 		<section class="mdl-card mdl-shadow--2dp" id="Sec2">
-			<h2>Widespread Adoption</h2>
+			<h2>Evolution</h2>
+			<p>Reginald Denny sold 15,000 of his drones to the military, who made the drones more efficient at flying and conserving energy. When the public discovered drones en masse, private industries quickly prepared drones for public release. The first drones were small quadcopters that would be controlled using radio waves. Their parts became smaller and more powerful, in particular with the widespread release of the transistor in the ‘60s. As technology improved, parts, such as the onboard computer, were compressed and allowed for a variety of designs, whereas the older technology only allowed for one physically possible and practical drone design.</p>
+		</section>
+		
+		<section class="mdl-card mdl-shadow--2dp" id="Sec3">
+			<h2>Proliferation</h2>
 			<div id="GrowthChart" class="SideChart">
 				<h3>Sales Over Time</h3>
 				<canvas id="myChart" width="400" height="400"></canvas>
 			</div>
-			<p>Reginald Denny sold 15,000 of his drones to the military, who made the drones more efficient at flying and conserving energy. When the public discovered drones en masse, private industries quickly prepared drones for public release. The first drones were small quadcopters that would be controlled using radio waves. Their parts became smaller and more powerful, in particular with the widespread release of the transistor in the ‘60s. As technology improved, parts, such as the onboard computer, were compressed and allowed for a variety of designs, whereas the older technology only allowed for one physically possible and practical drone design.</p>
+			<p>Drone production and usage are on the rise in the United States, not only for military purposes, but now for commercial and private purposes too.</p>
+			<p>The needs, reasons, and interests for using drones are nearly limitless. It is, in many ways, a new frontier for our country and the world. What we could only see from flying in expensive aircraft before can now be viewed for a nominal investment and little or no training. A newly accessible visual worls is being opened for most of the world.</p>
 		</section>
 		
+		<section class="mdl-card mdl-shadow--2dp" id="Sec4">
+			<h2>Future</h2>
+			<div id="UseChart" class="SideChart">
+				<h3>Common Uses</h3>
+				<canvas id="myChart2" width="400" height="400"></canvas>
+			</div>
+			<p>It's precisely because of their utility that today, drones are more common than ever. With their small, lightweight designs, easily maneuverable bodies, and relative affordability, they've become the perfect tool for professionals and hobbyists alike. Apart from the obvious jobs of filming video and shipping packages, creative users all around the world have put drones to work doing things Reginald Denny would've never dreamed of - everything from surveying to search-and-rescue and so much more (for more details, see the <a href="/Use/">uses</a> page).</p>
+			<p>Perhaps one of the greatest legacies of drones is not what they are currently doing, but how they've inspired people to find constantly new uses - to innovate upon the tools we have and to invent new ideas that help everyone. Drones are already being used to do so much, but it's not about what's happening now. It's about what's next. This new technology is only just taking off, as everyday, new people get their hands on this exciting equipment. Who knows what they'll do with it?</p>
+			<p>The future is a bring one indeed.</p>
+		</section>
 		
 		
 		
@@ -269,20 +291,8 @@
 		
 			smoothScroll.init(); 
 			function MoveDown(){
-				if(currLoc != 2){
+				if(currLoc != 4){
 					smoothScroll.animateScroll(null, '#Sec' + (currLoc + 1), {offset: 90});
-					/*var temp = currLoc + 1;
-					switch(temp){
-						case 1:
-							smoothScroll.animateScroll(null, '#Del', {offset: 100});
-							break;
-						case 2:
-							smoothScroll.animateScroll(null, '#Film', {offset: 100});
-							break;
-						case 3:
-							smoothScroll.animateScroll(null, '#Fun', {offset: 100});
-							break;
-					}*/
 				}
 				
 			}
@@ -319,6 +329,28 @@
 						currLoc = 2;
 					} else{
 						currLoc = 1;
+					}
+				},
+				offset:100
+			});
+			var waypointnav3 = new Waypoint({
+				element: document.getElementById('Sec3'),
+				handler: function(direction) {
+					if(direction == "down"){
+						currLoc = 3;
+					} else{
+						currLoc = 2;
+					}
+				},
+				offset:100
+			});
+			var waypointnav3 = new Waypoint({
+				element: document.getElementById('Sec4'),
+				handler: function(direction) {
+					if(direction == "down"){
+						currLoc = 4;
+					} else{
+						currLoc = 3;
 					}
 				},
 				offset:100
