TEST: New Drone

--- a/Hist/index.html
+++ b/Hist/index.html
@@ -58,6 +58,7 @@
 				<!--<h3>Common Uses</h3>
 				<canvas id="myChart2" width="400" height="400"></canvas>-->
 				<img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Reginald_Denny_in_Stars_of_the_Photoplay,_1924.jpg" alt="Reginald Denny" style="max-height:50vh;" />
+				<br />Reginald Denny
 			</div>
 			<p>Looking at the wide variety of drones in use today, doing everything from photography to surveying, it’s hard to imagine where this all must have started. However, drones didn't always exist in their modern forms. At first, they were purely experimental, based on an idea. The first drone we have record of come from Nikola Tesla. It wasn’t a remote-controlled aerial drone, but rather a “voice-activated” unmanned boat (in reality, he was using radio waves to turn motors on and off). The first unmanned aerial vehicle came from enthusiast and film star Reginald Denny. It was the size of a very small plane, big enough for a person to fit into.</p>
 		</section>
@@ -73,8 +74,8 @@
 				<h3>Sales Over Time</h3>
 				<canvas id="myChart" width="400" height="400"></canvas>
 			</div>
-			<p>Drone production and usage are on the rise in the United States, not only for military purposes, but now for commercial and private purposes too.</p>
-			<p>The needs, reasons, and interests for using drones are nearly limitless. It is, in many ways, a new frontier for our country and the world. What we could only see from flying in expensive aircraft before can now be viewed for a nominal investment and little or no training. A newly accessible visual worls is being opened for most of the world.</p>
+			<p>As costs have gone down, usages have gone up, and the mere idea of owning a flying robot has captured the public imagination, drone production and usage are on the rise in the United States, not only for military purposes, but now for commercial and private purposes too.</p>
+			<p>The needs, reasons, and interests for using drones are nearly limitless. It is, in many ways, a new frontier for our country and the world. What we could only see from flying in expensive aircraft before can now be viewed for a nominal investment and little or no training. Newly accessible visual worlds are being opened for most of the world.</p>
 		</section>
 		
 		<section class="mdl-card mdl-shadow--2dp" id="Sec4">
