--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 			</div>
 		</div>
 		<div class="BGCover" id="Pic2" data-0="opacity:0;bottom:calc(40vh - 5vw);" data-500="opacity:1;bottom:calc(60vh - 5vw);left:46.3vw;" data-1000="left:47.3vw;opacity:1;" data-1500="left:50vw;opacity:0;"></div>
+		<div data-0="opacity:0;left:0%;" data-500="left:-12%;opacity:1;" data-1000="left:-14%;opacity:1;top:-20%;" data-1500="left:-30%;opacity:0;top:0%;" class="BGCover" id="BG2"></div>
 		
 		
 		
@@ -126,7 +127,7 @@
 		
 		
 		<!--End-->
-		<div id="BG5" class="BGCover" data-3000="opacity:0;transform:translateX(10%);" data-3500="opacity:1;transform:translateX(0%);"></div>
+		<div id="BG5" class="BGCover" data-3000="opacity:0;transform:translateX(10%)translateY(5%);" data-3500="opacity:1;transform:translateX(0%)translateY(0%);"></div>
 		<!--img id="BG5" src="/img/SaroshDraws/Schoolno_kids.svg" alt="A school background"  data-3000="opacity:0;transform:translateX(10%);" data-3500="opacity:1;transform:translateX(0%);" /-->
 		<div class="demo-card-wide mdl-card mdl-shadow--2dp" id="Sec5" data-3299="right:-100vw;" data-3300="right:10%;opacity:0;transform:translateY(-80%);" data-3500="opacity:1;transform:translateY(-50%);">
 			<div class="mdl-card__title">
