FIX: I can't spell

--- a/Hist/index.html
+++ b/Hist/index.html
@@ -86,7 +86,7 @@
 			</div>
 			<p>It's precisely because of their utility that today, drones are more common than ever. With their small, lightweight designs, easily maneuverable bodies, and relative affordability, they've become the perfect tool for professionals and hobbyists alike. Apart from the obvious jobs of filming video and shipping packages, creative users all around the world have put drones to work doing things Reginald Denny would've never dreamed of - everything from surveying to search-and-rescue and so much more (for more details, see the <a href="/Use/">uses</a> page).</p>
 			<p>Perhaps one of the greatest legacies of drones is not what they are currently doing, but how they've inspired people to find constantly new uses - to innovate upon the tools we have and to invent new ideas that help everyone. Drones are already being used to do so much, but it's not about what's happening now. It's about what's next. This new technology is only just taking off, as everyday, new people get their hands on this exciting equipment. Who knows what they'll do with it?</p>
-			<p>The future is a bring one indeed.</p>
+			<p>The future is a bright one indeed.</p>
 		</section>
 		
 		
