--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
-		<script src="http://cleantech4us.github.io/JSDep/skrollr.min.js"></script>
+		<script src="https://realityplusplus.github.io/js/skrollrReal.js"></script>
 		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
