--- a/Tech/index.html
+++ b/Tech/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Drones: Technology</title>
 		
-		<script src="http://cleantech4us.github.io/JSDep/skrollr.min.js"></script>
+		<script src="https://realityplusplus.github.io/js/skrollrReal.js"></script>
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-orange.min.css" />
